--- a/proj.win32/RapidFire.vcxproj.filters
+++ b/proj.win32/RapidFire.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="..\Classes\SneakyJoystickSkinnedBase.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\Controller.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -78,6 +81,12 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\SneakyJoystick.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Controller.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\enums.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
