Retructuring files/folders
Implementing entity system.

--- a/proj.win32/RapidFire.vcxproj.filters
+++ b/proj.win32/RapidFire.vcxproj.filters
@@ -30,9 +30,6 @@
     <ClCompile Include="..\Classes\Game.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\Player.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
     <ClCompile Include="..\Classes\SneakyButton.cpp">
       <Filter>src</Filter>
     </ClCompile>
@@ -48,7 +45,15 @@
     <ClCompile Include="..\Classes\Controller.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\pathfinding\PathFinding.cpp" />
+    <ClCompile Include="..\Classes\Player.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Entity\Creature.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\AI\PathFinding.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -90,7 +95,18 @@
     <ClInclude Include="..\Classes\enums.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\pathfinding\PathFinding.h" />
+    <ClInclude Include="..\Classes\Entity\Creature.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\AI\PathFinding.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Components\Position.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Systems\Movement.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="game.rc">
