--- a/proj.win32/RapidFire.vcxproj.filters
+++ b/proj.win32/RapidFire.vcxproj.filters
@@ -10,6 +10,18 @@
     <Filter Include="src">
       <UniqueIdentifier>{bb6c862e-70e9-49d9-81b7-3829a6f50471}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\Entity">
+      <UniqueIdentifier>{a4113e94-9524-4909-865f-7d391b71c422}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Components">
+      <UniqueIdentifier>{55c4f26e-bcc4-48a4-8bd0-c1c73cdc9520}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Systems">
+      <UniqueIdentifier>{48f76738-1408-4221-a031-32f861f179f8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Input">
+      <UniqueIdentifier>{7e3ff16e-7808-4c1d-8fd6-51eada675f61}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -30,29 +42,29 @@
     <ClCompile Include="..\Classes\Game.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\SneakyButton.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\SneakyButtonSkinnedBase.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\SneakyJoystick.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\SneakyJoystickSkinnedBase.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\Controller.cpp">
-      <Filter>src</Filter>
+    <ClCompile Include="..\Classes\Entity\Creature.cpp">
+      <Filter>src\Entity</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\Player.cpp">
+      <Filter>src\Entity</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\GLES-Render.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\Entity\Creature.cpp">
-      <Filter>src</Filter>
+    <ClCompile Include="..\Classes\Input\SneakyButton.cpp">
+      <Filter>src\Input</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\AI\PathFinding.cpp">
-      <Filter>src</Filter>
+    <ClCompile Include="..\Classes\Input\SneakyButtonSkinnedBase.cpp">
+      <Filter>src\Input</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Input\SneakyJoystick.cpp">
+      <Filter>src\Input</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Input\SneakyJoystickSkinnedBase.cpp">
+      <Filter>src\Input</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\Input\Controller.cpp">
+      <Filter>src\Input</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -74,38 +86,62 @@
     <ClInclude Include="..\Classes\Game.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\Player.h">
-      <Filter>src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\SneakyJoystickSkinnedBase.h">
-      <Filter>src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\SneakyButton.h">
-      <Filter>src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\SneakyButtonSkinnedBase.h">
-      <Filter>src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\SneakyJoystick.h">
-      <Filter>src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Controller.h">
-      <Filter>src</Filter>
-    </ClInclude>
     <ClInclude Include="..\Classes\enums.h">
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Entity\Creature.h">
-      <Filter>src</Filter>
+      <Filter>src\Entity</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\AI\PathFinding.h">
-      <Filter>src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\Components\Position.h">
-      <Filter>src</Filter>
+    <ClInclude Include="..\Classes\Player.h">
+      <Filter>src\Entity</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Systems\Movement.h">
+      <Filter>src\Systems</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Components\PositionComponent.h">
+      <Filter>src\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Components\SpriteComponent.h">
+      <Filter>src\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Components\InputComponent.h">
+      <Filter>src\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Systems\InputSystem.h">
+      <Filter>src\Systems</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Components\PhysicsBodyComponent.h">
+      <Filter>src\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Components\CreatureComponent.h">
+      <Filter>src\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Components\PlayerComponent.h">
+      <Filter>src\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Components\EnemyComponent.h">
+      <Filter>src\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Components\AIComponent.h">
+      <Filter>src\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\GLES-Render.h">
       <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Input\SneakyButton.h">
+      <Filter>src\Input</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Input\SneakyButtonSkinnedBase.h">
+      <Filter>src\Input</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Input\SneakyJoystick.h">
+      <Filter>src\Input</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Input\SneakyJoystickSkinnedBase.h">
+      <Filter>src\Input</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Input\Controller.h">
+      <Filter>src\Input</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
