--- a/proj.win32/RapidFire.vcxproj
+++ b/proj.win32/RapidFire.vcxproj
@@ -149,8 +149,11 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
     <ClCompile Include="..\Classes\Entity\Creature.cpp" />
     <ClCompile Include="..\Classes\Game.cpp" />
+    <ClCompile Include="..\Classes\GameController.cpp" />
     <ClCompile Include="..\Classes\GLES-Render.cpp" />
+    <ClCompile Include="..\Classes\HealthBar.cpp" />
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
+    <ClCompile Include="..\Classes\InfiniteParallax.cpp" />
     <ClCompile Include="..\Classes\Input\Controller.cpp" />
     <ClCompile Include="..\Classes\Input\SneakyButton.cpp" />
     <ClCompile Include="..\Classes\Input\SneakyButtonSkinnedBase.cpp" />
@@ -170,12 +173,16 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\Components\PhysicsBodyComponent.h" />
     <ClInclude Include="..\Classes\Components\PlayerComponent.h" />
     <ClInclude Include="..\Classes\Components\PositionComponent.h" />
+    <ClInclude Include="..\Classes\Components\RapidComponents.h" />
     <ClInclude Include="..\Classes\Components\SpriteComponent.h" />
     <ClInclude Include="..\Classes\Entity\Creature.h" />
     <ClInclude Include="..\Classes\enums.h" />
     <ClInclude Include="..\Classes\Game.h" />
+    <ClInclude Include="..\Classes\GameController.h" />
     <ClInclude Include="..\Classes\GLES-Render.h" />
+    <ClInclude Include="..\Classes\HealthBar.h" />
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
+    <ClInclude Include="..\Classes\InfiniteParallax.h" />
     <ClInclude Include="..\Classes\Input\Controller.h" />
     <ClInclude Include="..\Classes\Input\SneakyButton.h" />
     <ClInclude Include="..\Classes\Input\SneakyButtonSkinnedBase.h" />
