--- a/proj.win32/RapidFire.vcxproj.filters
+++ b/proj.win32/RapidFire.vcxproj.filters
@@ -66,6 +66,15 @@
     <ClCompile Include="..\Classes\Input\Controller.cpp">
       <Filter>src\Input</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\InfiniteParallax.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\GameController.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\HealthBar.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -142,6 +151,18 @@
     </ClInclude>
     <ClInclude Include="..\Classes\Input\Controller.h">
       <Filter>src\Input</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\InfiniteParallax.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\GameController.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\HealthBar.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Components\RapidComponents.h">
+      <Filter>src\Components</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
