--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ vendor/*
 proj.win32/RapidFire.VC.VC.opendb
 bin/*
 proj.android-studio/proj.android-studio.iml
+proj.win32/RapidFire.VC.db
+proj.win32/RapidFire.VC.db
+proj.win32/RapidFire.VC.db
